--- a/app/src/main/res/layout/tab_view.xml
+++ b/app/src/main/res/layout/tab_view.xml
@@ -1,17 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:tools="http://schemas.android.com/tools"
+              tools:ignore="MissingPrefix"
               android:layout_width="match_parent"
               android:id="@+id/tab_view_container"
               android:layout_height="match_parent"
               android:gravity="center_horizontal"
               android:orientation="vertical">
-
-    <!--<ImageView
-        android:id="@+id/tab_image_view"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:layout_gravity="center_horizontal"
-        />-->
 
     <TextView
         android:id="@+id/tab_icon_text_view"
@@ -19,7 +14,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/tab_margin_top"
         android:layout_marginBottom="@dimen/tab_margin_bottom"
-        android:textSize="30sp"
+        android:textSize="@dimen/tab_icon_text_size"
+        fontPath="fonts/fontawesome-webfont.ttf"
         />
 
     <TextView
