--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="tab_margin_bottom">5dp</dimen>
     <dimen name="tab_height">72dp</dimen>
     <dimen name="tab_text_size">14sp</dimen>
+    <dimen name="tab_icon_text_size">32sp</dimen>
 </resources>
